@@ -95,8 +95,5 @@ binary-arch: build
 	dh_md5sums -a
 	dh_builddeb -a
 
-source diff:                                                                  
-	@echo >&2 'source and diff are obsolete - use dpkg-source -b'; false
-
 binary: binary-indep binary-arch
-.PHONY: update-ids build clean binary-indep binary-arch binary source diff
+.PHONY: update-ids build clean binary-indep binary-arch binary
